--- a/ch/6-discussion.tex
+++ b/ch/6-discussion.tex
@@ -35,7 +35,7 @@ The method based on target labels would furthermore benefit from better-calibrat
 \acf{GP} classifiers show generally good calibration,
 but cannot be easily applied in domains where deep neural networks are used.
 On the other hand, neural networks are known to be overconfident
-(especially when using ReLU activations \citep{hein2019relu}),
+\citep[especially when using ReLU activations;][]{hein2019relu},
 so to apply the proposed method to images directly is not straightforward.
 The other two proposed methods would benefit from improved adversarial training procedures.
 Training these models is not straightforward as the losses have to be balanced
