--- a/main.tex
+++ b/main.tex
@@ -108,6 +108,7 @@ titlepage,numbers=noenddot,%1headlines,
   mincitenames=1,
   style=authoryear-comp, % Author 1999, 2010
   %backref=true,%
+  uniquename=false,  % suppresses initials for authors with same last name
   natbib=true % natbib compatibility mode (\citep and \citet still work)
 }{biblatex}
     \usepackage{biblatex}
