--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % A Classic Thesis Style
 % An Homage to The Elements of Typographic Style
 % **************************************************************************************************************
-\RequirePackage{silence} % :-\
+\RequirePackage{silence}
     \WarningFilter{scrreprt}{Usage of package `titlesec'}
     %\WarningFilter{scrreprt}{Activating an ugly workaround}
     \WarningFilter{titlesec}{Non standard sectioning command}
@@ -500,8 +500,7 @@ titlepage,numbers=noenddot,%1headlines,
 \part{Preliminaries}\label{pt:intro}
 \include{ch/1-introduction}
 \include{ch/2-related-work}
-% \include{ch/3-0-common-notation}
-\include{ch/4-structure}
+\include{ch/3-structure}
 
 \cleardoublepage
 \ctparttext{
@@ -515,7 +514,7 @@ titlepage,numbers=noenddot,%1headlines,
 
 \cleardoublepage
 \part{Conclusion}\label{pt:end}
-\include{ch/6-discussion}
+\include{ch/7-discussion}
 
 % ********************************************************************
 % Appendix
