--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -21,26 +21,26 @@ to more serious ones,
 like black men being several times less likely to receive bail than white men in the COMPAS dataset \citep{angwin2016machine}.
 In the absence of truly `fair' datasets, our methods have to be able to avoid these biases.
 
-Now, one possible objection here is:
-if those datasets are of such poor quality,
-then maybe we just should not train any \ac{ML} model on these and should not use them to make automated decisions?
-While this question is mostly beyond the scope of this document, let me offer some thoughts on this:
-It is true that even after the application of de-biasing techniques,
-the resulting models still should not be fully trusted,
-but they can still ease the burden of checking everything manually;
-similar to an email spam filter which is not perfect, but still very useful.
-Or, put another way, it is always important to check what the realistic alternative is;
-we should not compare a model to a non-existing perfect ideal, but to the actual solution that would be used instead.
-One could imagine a hybrid approach where an automated system makes preliminary decisions,
-but random samples are reviewed by humans and decisions can always be challenged.
-Ideally, the model itself would tell us about decisions it is uncertain about.
+% Now, one possible objection here is:
+% if those datasets are of such poor quality,
+% then maybe we just should not train any \ac{ML} model on these and should not use them to make automated decisions?
+% While this question is mostly beyond the scope of this document, let me offer some thoughts on this:
+% It is true that even after the application of de-biasing techniques,
+% the resulting models still should not be fully trusted,
+% but they can still ease the burden of checking everything manually;
+% similar to an email spam filter which is not perfect, but still very useful.
+% Or, put another way, it is always important to check what the realistic alternative is;
+% we should not compare a model to a non-existing perfect ideal, but to the actual solution that would be used instead.
+% One could imagine a hybrid approach where an automated system makes preliminary decisions,
+% but random samples are reviewed by humans and decisions can always be challenged.
+% Ideally, the model itself would tell us about decisions it is uncertain about.
 
-Moreover, two of the three methods presented in this thesis require access to (unlabelled) \emph{unbiased} data,
-which is used during the training process.
-The remaining method requires summary statistics of the unbiased target dataset.
-So, the criticism that we are only learning from biased data does not apply here.
-This should allow us to be more confident in the predictions produced by those methods,
-because the methods learn from additional, unbiased information.
+% Moreover, two of the three methods presented in this thesis require access to (unlabelled) \emph{unbiased} data,
+% which is used during the training process.
+% The remaining method requires summary statistics of the unbiased target dataset.
+% So, the criticism that we are only learning from biased data does not apply here.
+% This should allow us to be more confident in the predictions produced by those methods,
+% because the methods learn from additional, unbiased information.
 
 Throughout this thesis, the aim is to learn a model from biased training data,
 which gives fair predictions (where `fair' is given by specific definitions) on an unbiased test set.
@@ -137,54 +137,52 @@ Just like \ac{DP},
 the fairness definitions \ac{EOpp} and \ac{EOdds} can help us evaluate
 how much a classifier is affected by the bias in the training set.
 
-% \section{Claims and contributions}%
-\section{List of publications and author contributions}%
-\label{sec:claims-contributions}
-This thesis is based on 3 publications, corresponding to \rangechapref{ch:paper1}{ch:paper3}.
-The first one is concerned with \emph{label bias} and the other two with \emph{sampling bias}.
+\section{Connection to other fields}
+The thesis is mostly written from the perspective of algorithmic  fairness, but it touches on other fields as well, like \emph{domain shift} and \emph{causality}.
+A domain shift is, in general, a change in the data distribution between the training set and the deployment setting;
+one often talks of a ``source domain'' and a ``target domain''.
+Typically, this leads to poor performance of the \ac{ML} system in the deployment setting,
+which necessitates the development of \emph{domain adaptation} methods.
+There are thus strong parallels to the problem of dataset bias and fairness,
+but domain shift is more general and has a different emphasis.
+In domain shift, it is the whole data distribution that changes, including the meaning of individual features,
+whereas in the biased-data setting (as defined in this thesis), the distribution of training data broadly matches that of the deployment setting, except for incorrect labels or censored sampling.
+Furthermore, the field of algorithmic fairness is characterised by a focus on special attributes (sensitive attributes) that should not be used to make predictions;
+a focus that the problem of domain shift lacks.
+Nevertheless, methods developed for domain adaptation can often be adapted to the problem of biased data:
+A good amount of the prior work discussed in \chapref{ch:related-work} was motivated by domain adaptation instead of fairness.
+Similarly, it should be possible to adapt fairness methods to tackle domain shift,
+however, this has rarely happened.
 
-\subsection{Publication 1}
-\begin{refsection}[allreferences]
-    \nocite{kehrenberg2020tuning}
-    \printbibliography[heading=none]
-\end{refsection}
-\noindent A shorter version was published as a workshop paper:
-\begin{refsection}[allreferences]
-    \nocite{kehrenberg2018interpretable}
-    \printbibliography[heading=none]
-\end{refsection}
-\noindent\textsc{Contributions:}
-\begin{itemize}
-  \item I conceived the idea of using Target Labels to target a balanced set. I developed the proof from a starting point that my supervisor pointed me to. I wrote all of the code dealing with the modified loss function and nearly all of the remaining code as well. I ran most of the experiments and wrote all of the methods section and most of the remaining text as well.
-  \item Z. Chen was a discussion partner and helped run the experiments, and wrote some parts of the code.
-  \item N. Quadrianto suggested the initial direction of the work, was a discussion partner, and helped write the introduction and related work.
-\end{itemize}
+The other closely related topic is \emph{causality}.
+The argument that a solution to the dataset bias problem involves causality goes as follows:
+As mentioned above, the goal is to ignore the bias in the data
+and learn the true underlying structure that is hidden in the data.
+Often, the most fundamental structure that we can learn is the \emph{causal} structure of the problem of interest.
+For example, if an \acs{ML} model truly understood what makes someone a good employee,
+it would not need to rely on surface characteristics like whether the applicants name sounds foreign.
+% Learning such causal models is not yet completely in the realm of what today's \ac{ML} systems can achieve \citep{pearl2019seven},
+% and will likely require a very large amount of data.
+% (The models that perhaps come close to this are methods like unsupervised methods like GPT \citep{radford2018improving,radford2019language,brown2020language} that have been trained on enormous amounts of data.)
+However, the work in this thesis is not presented under the banner of causality, for several reasons.
+% First, a majority of the experiments are on images, such that the input features are pixel values,
+% and thus do not lend themselves well to be analysed with methods like Bayesian
+First, in as far as the presented methods solve a causal structure problem, they solve a very limited one;
+inputs are mapped to outputs, and no detailed exploration of a potential implicit causal model is performed.
+Second, the discovered robust structures are not necessarily \emph{causal} in nature, in a narrow sense of the word.
+This is especially true in image data:
+For example, while discovering that the presence of a smile and the gender of the person in a photograph are two distinct characteristics
+requires a deep understanding of human faces,
+it does not require knowing how smiles and gender are related via cause-and-effect in the real world.
 
-\subsection{Publication 2}
-\begin{refsection}[allreferences]
-    \nocite{kehrenberg2020nullsampling}
-    \printbibliography[heading=none]
-\end{refsection}%
-\noindent\textsc{Contributions:}
-\begin{itemize}
-  \item I conceived the idea of using an \acf{INN} and a representative set to learn an invariant representation. I wrote a large part of the code, and ran about half the experiments. I wrote a significant part of the text.
-  \item M. Bartlett developed a large part of the tricks needed for training the \ac{INN} successfully. He wrote a significant part of the code, and of the text.
-  \item O. Thomas helped with writing the code and with running the experiments.
-  \item N. Quadrianto gave feedback on the progress and suggested directions to explore.
-\end{itemize}
+In the chapter on related work (\chapref{ch:related-work}),
+I discuss several methods that apply proper causal methods to fairness,
+but those methods assume that the true causal structure of the problem is already known,
+and are not helpful for discovering such structures.
+To work properly, they need access to either Bayesian networks or structural equation models.
+Neither of which the methods presented in this thesis can provide.
 
-\subsection{Publication 3}
-\begin{refsection}[allreferences]
-    \nocite{kehrenberg2020zeroshot}
-    \printbibliography[heading=none]
-\end{refsection}%
-\noindent\textsc{Contributions:}
-\begin{itemize}
-  \item I developed the idea of distribution matching as an extension of the previous paper. In addition, I tried to achieve similar goals by applying clustering to an unlabelled auxiliary set, with supervision from the labelled training set. I wrote all of the initial implementation of the method, and a large part of the later refined implementation. I ran the majority of the experiments.
-  \item V. Sharmanska developed the original link to a fairness problem and wrote parts of the introduction and related work and contributed to other sections.
-  \item M. Bartlett introduced the idea of batches-of-bags. He also improved the \ac{NN} architectures of the encoder and the discriminator, ran experiments, wrote the sections on architecture and contributed to other parts of the paper.
-  \item N. Quadrianto suggested how to combine the two research directions that I had into a coherent whole. He also gave general feedback and suggested directions to explore.
-\end{itemize}
+Finally, I will mention transfer learning and terms like interpretability and explainability.
 
 \section{Structure of document}%
 \label{sec:thesis-structure}
@@ -192,7 +190,9 @@ In \chapref{ch:related-work}, I present related work,
 concentrating on the area of algorithmic fairness and dataset bias.
 \Chapref{ch:content} summarises the main contributions of this thesis
 and describes their relationship to one another.
-\Rangechapref{ch:paper1}{ch:paper3} reproduce the publications listed in the previous section.
+The chapter concludes with a list of the publications that constitute the main contribution of the thesis,
+accompanied by a description of the contributions to the publications, separated by author.
+\Rangechapref{ch:paper1}{ch:paper3} reproduce these publications with minimal changes.
 % constitute the main contribution of this thesis.
 % Each of these chapters starts with a brief section which positions the chapter in the context of the this document.
 % This is followed by the contents of publications.
